source/sass/blocks/bicycles.scss
.bicycles {
  @include container;
  text-align: center;
  padding-top: 149px;
  padding-bottom: 144px;
  background-color: $gray;
}

.bicycles__wrapper {
  @include desktop-wrapper;
  padding: 0 calc(12% - 12px);
}

.bicycles h2 {
  @include reset;
  margin-bottom: 50px;
  font-family: "Open Sans", "Arial", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 30px;
  line-height: 30px;
  letter-spacing: -0.01em;
  color: $black-additional;
}

.bicycles ul {
  @include reset;
  list-style: none;
  display: grid;
  grid-template-columns: repeat(3, minmax(240px, 1fr));
  column-gap: 50px;
  row-gap: 20px;
}

.bicycles li:nth-of-type(3n-2) {
  padding-top: 0.74vw;
}

.bicycles li:nth-of-type(3n-1) {
  padding-top: 2.74vw;
}

.bicycles img {
  object-fit: cover;
}

.bicycles h3 {
  @include reset;
  margin-top: 25px;
  font-family: "Open Sans", "Arial", sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 22px;
  line-height: 34px;
  letter-spacing: -0.5px;
  color: $black;
}

.bicycles__image-inner {
  &--big-circle {
    position: relative;
    z-index: 2;

    &::after {
      content: "";
      position: absolute;
      z-index: -1;
      top: 31%;
      left: -19%;
      width: 53%;
      height: 35%;
      border-radius: 50%;
      border: 27px solid $turquoise;
    }
  }

  &--rectungle {
    position: relative;

    &::before {
      content: "";
      position: absolute;
      width: 14%;
      height: 9%;
      top: -4%;
      left: -6%;
      border: 8px solid $turquoise;
    }

    &::after {
      content: "";
      position: absolute;
      width: 14%;
      height: 9%;
      bottom: -4%;
      right: -7%;
      border: 8px solid $turquoise;
    }
  }

  &--mini-circle {
    position: relative;

    &::after {
      content: "";
      position: absolute;
      top: -6%;
      right: -13%;
      width: 29%;
      height: 18%;
      border-radius: 50%;
      border: 17px solid $turquoise;
    }
  }
}

@media (max-width: $tablet-breakpoint) {
  .bicycles {
    padding-top: 50px;
    padding-bottom: 69px;
    overflow: hidden;
  }

  .bicycles__wrapper {
    padding: 0 80px;
  }

  .bicycles h2 {
    margin-bottom: 28px;
    font-size: 24px;
    line-height: 41px;
    letter-spacing: -0.01em;
  }

  .bicycles ul {
    column-gap: 0;
    row-gap: 0;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
  }

  .bicycles li:nth-of-type(3n-2) {
    padding-top: 0;
  }

  .bicycles li:nth-of-type(3n-1) {
    padding-top: 0;
  }

  .bicycles li:nth-of-type(2n) {
    margin-left: 50px;
    margin-bottom: 50px;
  }

  .bicycles img {
    border-radius: 10px;
    object-fit: cover;
    width: 35.2vw;
    height: 39.07vw;
  }

  .bicycles h3 {
    margin-top: 17px;
  }

  .bicycles__image-inner {
    &--big-circle {
      &::after {
        top: 26vw;
        left: -6vw;
        width: 16.54vw;
        height: 16.54vw;
        border: 18px solid $turquoise;
      }
    }

    &--rectungle {
      &::before,
      &::after {
        display: none;
      }
    }

    &--mini-circle {
      &::after {
        top: -3vw;
        right: -3vw;
        width: 7.66vw;
        height: 7.66vw;
        border: 13px solid $turquoise;
      }
    }
  }
}

@media (max-width: $mobile-breakpoint) {
  .bicycles {
    padding-top: 50px;
    padding-bottom: 13px;
  }

  .bicycles__wrapper {
    padding: 0 16px;
  }

  .bicycles ul {
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
  }

  .bicycles li:nth-of-type(2n) {
    margin-left: 0;
    margin-bottom: 40px;
  }

  .bicycles li {
    margin-bottom: 40px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .bicycles img {
    width: 84.4vw;
    height: 93.75vw;
  }

  .bicycles h3 {
    margin-top: 20px;
    z-index: 2;
  }

  .bicycles__image-inner {
    &--big-circle {
      &::after {
        top: 63vw;
        left: -7vw;
        width: 39.7vw;
        height: 39.7vw;
        border: 4vw solid $turquoise;
      }
    }

    &--rectungle {
      &::before,
      &::after {
        display: none;
      }
    }

    &--mini-circle {
      &::after {
        top: -7vw;
        right: -5vw;
        width: 21.25vw;
        height: 21.25vw;
        border: 4vw solid $turquoise;
      }
    }
  }
}

